--- a/index.html
+++ b/index.html
@@ -1,28 +1,3 @@
-<!doctype html>
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>VGBase 2.0</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-gradient-to-br from-teal-100 to-blue-200 text-slate-900 antialiased min-h-screen">
-    <!-- Top bar with login/profile -->
-    <header class="flex justify-end p-4">
-      <div class="relative group text-sm text-slate-700">
-        <div class="flex flex-col items-center cursor-pointer">
-          <div class="w-10 h-10 rounded-full bg-teal-600 text-white flex items-center justify-center font-bold">D</div>
-          <span class="mt-1">Don</span>
-        </div>
-        <!-- Hover dropdown -->
-        <div class="absolute right-0 mt-2 hidden group-hover:block bg-white border border-slate-200 rounded-lg shadow px-4 py-2">
-          <button class="text-red-600 hover:text-red-700">Log out</button>
-        </div>
-      </div>
-    </header>
-
-```
 <main class="w-full max-w-5xl mx-auto p-8">
   <!-- Title -->
   <h1 class="text-4xl font-extrabold text-center mb-2 text-teal-700 drop-shadow">
@@ -73,21 +48,20 @@
         <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="LCN-00123" />
       </label>
 
-      <!-- DOL Range + inline search -->
-      <div class="grid gap-1 text-sm md:col-span-2">
+      <!-- DOL Date Range (single field under Phone) + inline search -->
+      <div class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">DOL (Date Range)</span>
-        <div class="flex flex-col md:flex-row md:items-center gap-2">
-          <div class="flex items-center gap-2 flex-1">
-            <input type="date" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" aria-label="DOL From" />
-            <span class="text-slate-500">to</span>
-            <input type="date" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" aria-label="DOL To" />
-          </div>
-          <button type="button" class="self-start md:self-auto rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this date range" aria-label="Search on DOL range">
+        <div class="flex items-center gap-2">
+          <input type="date" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" aria-label="DOL From" />
+          <span class="text-slate-500">to</span>
+          <input type="date" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" aria-label="DOL To" />
+          <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this date range" aria-label="Search on DOL range">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
               <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
             </svg>
           </button>
         </div>
+        <p class="text-xs text-slate-500">Use the ✓ to search within this date range.</p>
       </div>
 
       <!-- Incident Type -->
@@ -103,10 +77,16 @@
         </select>
       </label>
 
+      <!-- Email -->
+      <label class="grid gap-1 text-sm">
+        <span class="font-medium text-teal-800">Email</span>
+        <input type="email" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="you@example.com" />
+      </label>
+
       <!-- Job Folder -->
       <label class="grid gap-1 text-sm">
         <span class="font-medium text-teal-800">Job Folder</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="ICN-98765" />
+        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="e.g., JF-2025-0042" />
       </label>
 
       <!-- Primary (toggle) -->
@@ -123,7 +103,3 @@
     </form>
   </section>
 </main>
-```
-
-  </body>
-</html>
