--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -22,108 +21,109 @@
       </div>
     </header>
 
-```
-<main class="w-full max-w-5xl mx-auto p-8">
-  <!-- Title -->
-  <h1 class="text-4xl font-extrabold text-center mb-2 text-teal-700 drop-shadow">
-    VGBase <span class="text-blue-700">Version 2.0</span>
-  </h1>
-  <p class="text-center text-slate-700 mb-10 font-medium">Client Lookup and Conflict Resolution Check</p>
+    <main class="w-full max-w-5xl mx-auto p-8">
+      <!-- Title -->
+      <h1 class="text-4xl font-extrabold text-center mb-2 text-teal-700 drop-shadow">
+        VGBase <span class="text-blue-700">Version 2.0</span>
+      </h1>
+      <p class="text-center text-slate-700 mb-10 font-medium">Client Lookup and Conflict Resolution Check</p>
 
-  <!-- Form Card -->
-  <section class="bg-white/90 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-teal-200">
-    <h2 class="text-xl font-semibold text-teal-800 mb-6">Contact / Case Details</h2>
+      <!-- Form Card -->
+      <section class="bg-white/90 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-teal-200">
+        <h2 class="text-xl font-semibold text-teal-800 mb-6">Contact / Case Details</h2>
 
-    <form class="grid grid-cols-1 md:grid-cols-2 gap-6">
-      <!-- Contact + inline search -->
-      <div class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Contact</span>
-        <div class="flex gap-2 items-center">
-          <input type="text" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Jane Doe" />
-          <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data" aria-label="Search on contact">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-              <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
-            </svg>
-          </button>
-        </div>
-      </div>
-
-      <!-- Address -->
-      <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Address</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="123 Main St, Springfield" />
-      </label>
-
-      <!-- Phone + inline search -->
-      <div class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Phone Number</span>
-        <div class="flex gap-2 items-center">
-          <input type="tel" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="(555) 123-4567" />
-          <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data" aria-label="Search on phone">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-              <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
-            </svg>
-          </button>
-        </div>
-      </div>
-
-      <!-- Lawyer Case Number -->
-      <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Lawyer Case Number</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="LCN-00123" />
-      </label>
-
-      <!-- DOL Range + inline search -->
-      <div class="grid gap-1 text-sm md:col-span-2">
-        <span class="font-medium text-teal-800">DOL (Date Range)</span>
-        <div class="flex flex-col md:flex-row md:items-center gap-2">
-          <div class="flex items-center gap-2 flex-1">
-            <input type="date" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" aria-label="DOL From" />
-            <span class="text-slate-500">to</span>
-            <input type="date" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" aria-label="DOL To" />
+        <form class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <!-- Contact + inline search -->
+          <div class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Contact</span>
+            <div class="flex gap-2 items-center">
+              <input type="text" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Jane Doe" />
+              <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data" aria-label="Search on contact">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                  <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
+                </svg>
+              </button>
+            </div>
           </div>
-          <button type="button" class="self-start md:self-auto rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this date range" aria-label="Search on DOL range">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-              <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
-            </svg>
-          </button>
-        </div>
-      </div>
 
-      <!-- Incident Type -->
-      <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Incident Type</span>
-        <select class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none">
-          <option value="">Select…</option>
-          <option>Theft</option>
-          <option>Accident</option>
-          <option>Civil</option>
-          <option>Criminal</option>
-          <option>Other</option>
-        </select>
-      </label>
+          <!-- Address -->
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Address</span>
+            <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="123 Main St, Springfield" />
+          </label>
 
-      <!-- Job Folder -->
-      <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Job Folder</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="ICN-98765" />
-      </label>
+          <!-- Phone with search -->
+          <div class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Phone Number</span>
+            <div class="flex gap-2 items-center">
+              <input type="tel" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="(555) 123-4567" />
+              <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data" aria-label="Search on phone">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                  <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
+                </svg>
+              </button>
+            </div>
+          </div>
 
-      <!-- Primary (toggle) -->
-      <div class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Primary</span>
-        <label class="inline-flex items-center gap-3 select-none">
-          <input type="checkbox" class="peer sr-only" />
-          <span class="w-11 h-6 inline-flex items-center rounded-full bg-slate-300 peer-checked:bg-teal-600 transition">
-            <span class="w-5 h-5 bg-white rounded-full shadow transform translate-x-0 peer-checked:translate-x-5 transition"></span>
-          </span>
-          <span class="text-slate-700">Mark as primary</span>
-        </label>
-      </div>
-    </form>
-  </section>
-</main>
-```
+          <!-- Lawyer Case Number -->
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Lawyer Case Number</span>
+            <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="LCN-00123" />
+          </label>
 
+          <!-- Email -->
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Email</span>
+            <input type="email" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="jane.doe@example.com" />
+          </label>
+
+          <!-- DOL Range tightened (single column under Phone) + inline search -->
+          <div class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">DOL (Date Range)</span>
+            <div class="flex gap-2 items-center">
+              <input type="date" class="w-40 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" aria-label="DOL From" />
+              <span class="text-slate-500">to</span>
+              <input type="date" class="w-40 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" aria-label="DOL To" />
+              <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this date range" aria-label="Search on DOL range">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+                  <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
+                </svg>
+              </button>
+            </div>
+          </div>
+
+          <!-- Incident Type -->
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Incident Type</span>
+            <select class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none">
+              <option value="">Select…</option>
+              <option>Theft</option>
+              <option>Accident</option>
+              <option>Civil</option>
+              <option>Criminal</option>
+              <option>Other</option>
+            </select>
+          </label>
+
+          <!-- Job Folder -->
+          <label class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Job Folder</span>
+            <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Folder-001" />
+          </label>
+
+          <!-- Primary (toggle) -->
+          <div class="grid gap-1 text-sm">
+            <span class="font-medium text-teal-800">Primary</span>
+            <label class="inline-flex items-center gap-3 select-none">
+              <input type="checkbox" class="peer sr-only" />
+              <span class="w-11 h-6 inline-flex items-center rounded-full bg-slate-300 peer-checked:bg-teal-600 transition">
+                <span class="w-5 h-5 bg-white rounded-full shadow transform translate-x-0 peer-checked:translate-x-5 transition"></span>
+              </span>
+              <span class="text-slate-700">Mark as primary</span>
+            </label>
+          </div>
+        </form>
+      </section>
+    </main>
   </body>
 </html>
