--- a/index.html
+++ b/index.html
@@ -1,46 +1,26 @@
-<!doctype html>
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>VGBase 2.0</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-gradient-to-br from-teal-100 to-blue-200 text-slate-900 antialiased min-h-screen">
-    <!-- Top bar with login/profile -->
-    <header class="flex justify-end p-4">
-      <div class="relative group text-sm text-slate-700">
-        <div class="flex flex-col items-center cursor-pointer">
-          <div class="w-10 h-10 rounded-full bg-teal-600 text-white flex items-center justify-center font-bold">D</div>
-          <span class="mt-1">Don</span>
-        </div>
-        <!-- Hover dropdown -->
-        <div class="absolute right-0 mt-2 hidden group-hover:block bg-white border border-slate-200 rounded-lg shadow px-4 py-2">
-          <button class="text-red-600 hover:text-red-700">Log out</button>
-        </div>
-      </div>
-    </header>
-
-```
-<main class="w-full max-w-5xl mx-auto p-8">
+<main class="w-full max-w-5xl mx-auto px-4 py-10">
   <!-- Title -->
-  <h1 class="text-4xl font-extrabold text-center mb-2 text-teal-700 drop-shadow">
-    VGBase <span class="text-blue-700">Version 2.0</span>
-  </h1>
-  <p class="text-center text-slate-700 mb-10 font-medium">Client Lookup and Conflict Resolution Check</p>
+  <section class="mb-8">
+    <h1 class="text-3xl md:text-4xl font-bold text-slate-800 text-center">
+      VGBase <span class="text-teal-700">Version 2.0</span>
+    </h1>
+    <p class="text-center text-slate-600 mt-2">
+      Client lookup &amp; conflict resolution check
+    </p>
+  </section>
 
   <!-- Form Card -->
-  <section class="bg-white/90 backdrop-blur-sm p-8 rounded-2xl shadow-lg border border-teal-200">
-    <h2 class="text-xl font-semibold text-teal-800 mb-6">Contact / Case Details</h2>
+  <section class="bg-white p-8 rounded-xl shadow-sm border border-slate-200">
+    <h2 class="text-lg font-semibold text-slate-800 mb-6">Contact / Case Details</h2>
 
     <form class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <!-- Contact + inline search -->
       <div class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Contact</span>
+        <span class="font-medium text-slate-800">Contact</span>
         <div class="flex gap-2 items-center">
-          <input type="text" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Jane Doe" />
-          <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data" aria-label="Search on contact">
+          <input type="text" class="flex-1 border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus:border-teal-600 placeholder:text-slate-400" placeholder="Jane Doe" />
+          <button type="button" class="rounded-md border border-teal-600 text-teal-700 px-2.5 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data" aria-label="Search on contact">
+            <!-- checkmark icon -->
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
               <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
             </svg>
@@ -50,16 +30,16 @@
 
       <!-- Address -->
       <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Address</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="123 Main St, Springfield" />
+        <span class="font-medium text-slate-800">Address</span>
+        <input type="text" class="border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus:border-teal-600 placeholder:text-slate-400" placeholder="123 Main St, Springfield" />
       </label>
 
-      <!-- Phone with search -->
+      <!-- Phone + inline search -->
       <div class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Phone Number</span>
+        <span class="font-medium text-slate-800">Phone Number</span>
         <div class="flex gap-2 items-center">
-          <input type="tel" class="flex-1 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="(555) 123-4567" />
-          <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data" aria-label="Search on phone">
+          <input type="tel" class="flex-1 border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus:border-teal-600 placeholder:text-slate-400" placeholder="(555) 123-4567" />
+          <button type="button" class="rounded-md border border-teal-600 text-teal-700 px-2.5 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this data" aria-label="Search on phone">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
               <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
             </svg>
@@ -69,65 +49,18 @@
 
       <!-- Lawyer Case Number -->
       <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Lawyer Case Number</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="LCN-00123" />
+        <span class="font-medium text-slate-800">Lawyer Case Number</span>
+        <input type="text" class="border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus:border-teal-600 placeholder:text-slate-400" placeholder="LCN-00123" />
       </label>
 
       <!-- Email -->
       <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Email</span>
-        <input type="email" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="jane.doe@example.com" />
+        <span class="font-medium text-slate-800">Email</span>
+        <input type="email" class="border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus:border-teal-600 placeholder:text-slate-400" placeholder="jane.doe@example.com" />
       </label>
 
-      <!-- DOL Range tightened under Phone -->
+      <!-- DOL Range (single row under Phone) + inline search -->
       <div class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">DOL (Date Range)</span>
-        <div class="flex gap-2 items-center">
-          <input type="date" class="w-40 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" aria-label="DOL From" />
-          <span class="text-slate-500">to</span>
-          <input type="date" class="w-40 border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" aria-label="DOL To" />
-          <button type="button" class="rounded-lg border border-teal-400 text-teal-700 px-3 py-2 hover:bg-teal-50 flex items-center justify-center" title="Search on this date range" aria-label="Search on DOL range">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-              <path fill-rule="evenodd" d="M16.704 5.29a1 1 0 0 1 .006 1.414l-7.25 7.3a1 1 0 0 1-1.424-.01L3.29 9.94a1 1 0 1 1 1.42-1.41l3.02 3.04 6.54-6.58a1 1 0 0 1 1.434 0Z" clip-rule="evenodd" />
-            </svg>
-          </button>
-        </div>
-      </div>
-
-      <!-- Incident Type -->
-      <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Incident Type</span>
-        <select class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none">
-          <option value="">Select…</option>
-          <option>Theft</option>
-          <option>Accident</option>
-          <option>Civil</option>
-          <option>Criminal</option>
-          <option>Other</option>
-        </select>
-      </label>
-
-      <!-- Job Folder -->
-      <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Job Folder</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="Folder-001" />
-      </label>
-
-      <!-- Insurance Company -->
-      <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Insurance Company</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="e.g., Acme Mutual" />
-      </label>
-
-      <!-- Insurance Company Claim Number -->
-      <label class="grid gap-1 text-sm">
-        <span class="font-medium text-teal-800">Insurance Company Claim Number</span>
-        <input type="text" class="border border-teal-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-teal-400 focus:outline-none" placeholder="e.g., CLM-123456" />
-      </label>
-    </form>
-  </section>
-</main>
-```
-
-  </body>
-</html>
+        <span class="font-medium text-slate-800">DOL (Date Range)</span>
+        <div class="flex items-center gap-2">
+          <input type="date" class="w-40 border border-slate-300 rounded-md px-3 py-2 focus:outline-none focus:ring-1 focus:ring-teal-600 focus:borde
