--- a/index.html
+++ b/index.html
@@ -13,33 +13,61 @@
         <div class="text-sm font-semibold tracking-tight text-slate-800">
           VGBase <span class="text-teal-700">2.0</span>
         </div>
-        <div class="relative group text-sm text-slate-700">
-          <div class="flex flex-col items-center cursor-pointer">
+
+        <!-- Profile / actions -->
+        <div class="relative text-sm text-slate-700">
+          <button id="profileBtn" class="flex items-center gap-2 cursor-pointer select-none" aria-haspopup="menu" aria-expanded="false">
             <div class="w-9 h-9 rounded-full bg-teal-700 text-white flex items-center justify-center font-bold">D</div>
-            <span class="mt-1 text-xs text-slate-600">Don</span>
-          </div>
-          <!-- Hover dropdown -->
-          <div class="absolute right-0 mt-2 hidden group-hover:block bg-white border border-slate-200 rounded-md shadow px-3 py-1.5">
-            <button class="text-red-600 hover:text-red-700">Log out</button>
+            <span class="hidden sm:inline text-xs text-slate-600">Don</span>
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-slate-500" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.172l3.71-3.94a.75.75 0 011.08 1.04l-4.24 4.5a.75.75 0 01-1.08 0l-4.24-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
+            </svg>
+          </button>
+
+          <!-- Dropdown menu -->
+          <div id="profileMenu" class="absolute right-0 mt-2 w-56 bg-white border border-slate-200 rounded-md shadow-lg p-2 hidden" role="menu" aria-labelledby="profileBtn">
+            <!-- role badge -->
+            <div class="flex items-center justify-between px-2 py-1.5">
+              <span class="text-xs font-medium text-slate-600">Signed in as</span>
+              <span class="inline-flex items-center gap-1 rounded-full bg-teal-50 text-teal-700 border border-teal-200 px-2 py-0.5 text-xs">
+                <span class="w-1.5 h-1.5 rounded-full bg-teal-500"></span> Admin
+              </span>
+            </div>
+            <div class="my-2 h-px bg-slate-100"></div>
+            <!-- links (dummy placeholders) -->
+            <a href="#" role="menuitem" class="flex items-center gap-2 px-2 py-2 rounded-md hover:bg-slate-50">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-slate-500" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M10.75 4.75a.75.75 0 00-1.5 0V10a.75.75 0 00.22.53l3 3a.75.75 0 101.06-1.06l-2.78-2.78V4.75z" />
+                <path d="M3.5 10a6.5 6.5 0 1111.02 4.74.75.75 0 101.06 1.06A8 8 0 102 10a.75.75 0 001.5 0z" />
+              </svg>
+              Go to Admin
+            </a>
+            <a href="#" role="menuitem" class="flex items-center gap-2 px-2 py-2 rounded-md hover:bg-slate-50">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-slate-500" viewBox="0 0 20 20" fill="currentColor">
+                <path d="M3 4.5A1.5 1.5 0 014.5 3h11A1.5 1.5 0 0117 4.5V6H3V4.5z" />
+                <path fill-rule="evenodd" d="M3 7.5h14v8A1.5 1.5 0 0115.5 17h-11A1.5 1.5 0 013 15.5v-8zm3 2.25a.75.75 0 000 1.5h8.25a.75.75 0 000-1.5H6z" clip-rule="evenodd" />
+              </svg>
+              Go to Data Entry
+            </a>
+            <a href="#" role="menuitem" class="flex items-center gap-2 px-2 py-2 rounded-md hover:bg-slate-50">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-slate-500" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M10 3a7 7 0 100 14A7 7 0 0010 3zM8.75 7a.75.75 0 000 1.5h2.5a.75.75 0 000-1.5h-2.5zM7 10a.75.75 0 01.75-.75h4.5a.75.75 0 010 1.5h-4.5A.75.75 0 017 10z" clip-rule="evenodd" />
+              </svg>
+              Settings
+            </a>
+            <div class="my-2 h-px bg-slate-100"></div>
+            <button role="menuitem" class="w-full text-left flex items-center gap-2 px-2 py-2 rounded-md hover:bg-red-50 text-red-600">
+              <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M3.5 10a.75.75 0 01.75-.75h7.69L9.22 6.53a.75.75 0 111.06-1.06l4.24 4.25a.75.75 0 010 1.06l-4.24 4.25a.75.75 0 11-1.06-1.06l2.72-2.72H4.25A.75.75 0 013.5 10z" clip-rule="evenodd" />
+              </svg>
+              Log out
+            </button>
           </div>
         </div>
       </div>
     </header>
 
-    <main class="w-full max-w-5xl mx-auto px-4 py-8">
-      <!-- Role boxes row -->
-      <div class="flex items-center justify-center gap-4 mb-6">
-        <div class="border border-slate-200 rounded-md px-4 py-2 text-center text-sm font-medium text-slate-700 hover:bg-slate-50 hover:border-slate-300 cursor-pointer shadow-sm">
-          Admin
-        </div>
-        <div class="border border-slate-200 rounded-md px-4 py-2 text-center text-sm font-medium text-slate-700 hover:bg-slate-50 hover:border-slate-300 cursor-pointer shadow-sm">
-          Entry
-        </div>
-        <div class="border border-slate-200 rounded-md px-4 py-2 text-center text-sm font-medium text-slate-700 hover:bg-slate-50 hover:border-slate-300 cursor-pointer shadow-sm">
-          User
-        </div>
-      </div>
-
+    <main class="w-full max-w-5xl mx-auto px-4 py-10">
       <!-- Title -->
       <section class="mb-8">
         <h1 class="text-3xl md:text-4xl font-bold text-slate-800 text-center">
@@ -148,5 +176,42 @@
         </form>
       </section>
     </main>
+
+    <script>
+      // Simple dropdown toggle for the profile menu (placeholder behavior)
+      (function () {
+        const btn = document.getElementById('profileBtn');
+        const menu = document.getElementById('profileMenu');
+
+        function closeMenu() {
+          if (!menu.classList.contains('hidden')) {
+            menu.classList.add('hidden');
+            btn.setAttribute('aria-expanded', 'false');
+          }
+        }
+
+        btn.addEventListener('click', (e) => {
+          e.stopPropagation();
+          const open = menu.classList.contains('hidden');
+          document.querySelectorAll('#profileMenu').forEach(closeMenu);
+          if (open) {
+            menu.classList.remove('hidden');
+            btn.setAttribute('aria-expanded', 'true');
+          } else {
+            closeMenu();
+          }
+        });
+
+        document.addEventListener('click', (e) => {
+          if (!menu.contains(e.target) && e.target !== btn) {
+            closeMenu();
+          }
+        });
+
+        document.addEventListener('keydown', (e) => {
+          if (e.key === 'Escape') closeMenu();
+        });
+      })();
+    </script>
   </body>
 </html>
